--- a/css/style.css
+++ b/css/style.css
@@ -44,18 +44,8 @@ a {
   color: #ffffff;
 }
 
-.site-navigation a:hover,
-.site-navigation a:focus,
-.user-navigation a:hover,
-.user-navigation a:focus,
-.slider-item a:hover,
-.slider-item a:focus,
-.stock-item a:hover,
-.stock-item a:focus,
 .catalog-item a:hover,
 .catalog-item a:focus,
-.map-adress a:hover,
-.map-adress a:focus,
 .social-list a:hover,
 .social-list a:focus,
 .links-list a:hover,
@@ -63,9 +53,7 @@ a {
 .footer-copyright a:hover,
 .footer-copyright a:focus,
 .breadcrumbs a:hover,
-.breadcrums a:focus,
-.pagination-list a:hover,
-.pagination-list a:focus {
+.breadcrums a:focus {
   color: #ffbc9e;
 }
 
@@ -75,19 +63,31 @@ a {
   vertical-align: middle;
   color: white;
   font-size: 18px;
-  font-weight: normal; 
+  font-weight: bold; 
 
-  background-image: linear-gradient( 0deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
+  background-image: linear-gradient(0deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
   box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
  
   border-radius: 28px;
   border: none;
 }
 
+.slider-item .button {
+  text-shadow: 0 2px 5px #a0200b;
+}
+
+
 .button:hover,
 .button:focus,
-.button:active {
-  
+.item-card:hover,
+.item-card:focus {
+  background-image: linear-gradient(0deg,rgb(245,134,105) 0%, rgb(236,111,94) 100%);
+}
+
+.button:active,
+.item-card:active {
+  background-image: linear-gradient(0deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
+  box-shadow: 0px -2px 2px 0px rgba(172, 16, 0, 0.64);
 }
 
 .search-form input,
@@ -96,9 +96,11 @@ a {
 .feedback-form input,
 .feedback-form textarea {
   font: inherit;
+  font-weight: bold;
   border: 1px solid #d3d3d2;
   border-radius: 4px;
 }
+
 
 .search-form input:hover,
 .login-form input:hover,
@@ -124,9 +126,10 @@ a {
 .feedback-form input::placeholder,
 .feedback-form textarea::placeholder {
   color: #999999;
+  font-weight: normal;
 }
 
-.site-navigation {
+.site-navigation-menu > a {
   font-weight: bold;
   text-decoration: underline;
 }
@@ -134,7 +137,7 @@ a {
 .menu li a,
 .menu li a:hover,
 .menu li a:focus {
-  font-weight: normal;
+  font-weight: 500;
   text-decoration: none;
   font-size: 14px;
   color: #323232;
@@ -142,8 +145,13 @@ a {
 
 .menu li:hover,
 .menu li:focus {
-  background-color: #fbded8;
+  background-color: #fbded7;
 }
+
+.menu li:active {
+  background-color: #f6b5a5;
+}
+
 
 .menu .selected {
   background-color: #d07058;
@@ -194,6 +202,23 @@ a.selected {
   background-image: none;
   box-shadow: none;
   background-color: white;
+  border-radius: 18px;
+  font-size: 14px;
+  font-weight: medium;
+}
+
+.site-navigation-menu > a:hover,
+.site-navigation-menu > a:focus {
+  color: #333333;
+  text-decoration: none;
+  background-image: none;
+  box-shadow: none;
+  background-color: white;
+  border-radius: 18px;
+}
+
+.site-navigation-menu > a:active {
+  box-shadow: inset 0 2px 1px 0px #696969;
 }
 
 .login a.login-button:hover,
@@ -408,10 +433,23 @@ tr img {
 
 .filter-button {
   background-image: none;
-  box-shadow: none;
+  box-shadow: inset 0 0 0 2px white;
   background-color: rgba(255,255,255,0.2);
   border-radius: 18px;
-  border: 2px solid white;
+  font-size: 16px;
+}
+
+.filter-button:hover,
+.filter-button:focus {
+  background-color: white;
+  background-image: none;
+  color: #323232;
+}
+
+.filter-button:active {
+  box-shadow: inset 0px 2px 1px 0px #696969;
+}
+
 }
 
 .breadcrumbs {
@@ -431,8 +469,22 @@ tr img {
   font-size: 14px;
 }
 
+.catalog-item:hover {
+  background-color: rgba(255,255,255,0.2);
+  border-radius: 5px;
+}
+
+.pagination-item {
+  font-weight: 500;
+}
+
 .pagination-item-current a {
   color: black;
   background-color: white;
+  border-radius: 50%;
+}
+
+.pagination-item a:hover {
+  background-color: rgba(255,255,255,0.2);
   border-radius: 50%;
 }
