--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
   background: #849d8f url("../img/light_1.png") top center no-repeat;
 }
 
+.catalog-background {
+  background: #849d8f url("../img/light_catalog.png") repeat-x top center;
+}
+
 a {
   text-decoration: none;
 }
@@ -60,8 +64,7 @@ a {
   color: #ffbc9e;
 }
 
-.button,
-.item-card {
+.button {
   text-align: center;
   vertical-align: middle;
   color: white;
@@ -71,7 +74,7 @@ a {
   background-image: linear-gradient(0deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
   box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
  
-  border-radius: 28px;
+  border-radius: 30px;
   border: none;
 }
 
@@ -230,11 +233,13 @@ a.cart-filled {
 .info-workinghour {
   font-weight: bold;
   font-size: 14px;
+  line-height: 16px;
 }
 
 .info-phone {
   font-weight: bold;
   font-size: 22px;
+  line-height: 24px;
 }
 
 .slider {
@@ -279,22 +284,24 @@ a.cart-filled {
 
 .stock-raspberry {
   background: url("../img/raspberry.jpg") left top no-repeat border-box;
-  border-radius: 12px;
+  border-radius: 15px;
 }
 
 .stock-chocolate {
   background: url("../img/chocolate.jpg") left top no-repeat border-box;
-  border-radius: 12px;
+  border-radius: 15px;
 }
 
 .catalog-item a {
   font-weight: 500;
+  line-height: 22px;
   text-decoration: underline;
 }
 
 .price {
   font-weight: bold;
   font-size: 45px;
+  text-shadow: 0 1px 3px #313235;
 }
 
 .price-weight {
@@ -308,7 +315,7 @@ tr img {
 
 .about-us {
   background: url("../img/waffle.jpg") left top repeat border-box;
-  border-radius: 12px;
+  border-radius: 15px;
   color: #323232;
   line-height: 22px;
 }
@@ -323,7 +330,7 @@ tr img {
 .news {
   color: #5a5a5a;
   background: url("../img/strawberry.jpg") left top no-repeat border-box;
-  border-radius: 12px;
+  border-radius: 15px;
 }
 
 .news h2 {
@@ -345,7 +352,7 @@ tr img {
 }
 
 .news {
-  background: url("../img/strawberry.jpg") no-repeat;
+  background: url("../img/strawberry.jpg") no-repeat -25px -225px;
   border-radius: 14px;
 }
 
@@ -357,7 +364,7 @@ tr img {
 .dispatch {
   position: relative;
   background-color: #f8f7f4;
-  border-radius: 14px;
+  border-radius: 10px;
   margin: 5px;
 }
 
@@ -371,13 +378,18 @@ tr img {
   height: 100%;
   background-image: url("../img/letter.png");
   border: 5px solid transparent;
-  border-radius: 14px;
+  border-radius: 10px;
   background-origin: border-box;
+}
+
+.map img {
+  position: relative;
+  top: -110px;
 }
 
 .map-adress {
   background-color: white;
-  border-radius: 12px;
+  border-radius: 15px;
   font-size: 14px;
   line-height: 20px;
   color: #323232;
@@ -395,9 +407,20 @@ tr img {
   font-size: 18px;
 }
 
-.social-list img {
-  border-radius: 16px;
-  box-shadow: 0 0 0 2px #c2cec7;
+.social-list svg {
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px rgba(255,255,255,0.5);
+  opacity: 0.8;
+}
+
+.social-button:hover svg,
+.social-button:focus svg {
+  box-shadow: 0 0 0 2px rgba(255,255,255,0.7);
+  opacity: 1;
+}
+
+.social-button:active path {
+  fill: #dae2de;
 }
 
 .links-list {
@@ -517,14 +540,32 @@ tr img {
   border-radius: 50%;
 }
 
-.visually-hidden,
+.visually-hidden:not(:focus):not(:active),
+input[type="radio"].visually-hidden,
 .modal {
-  display: none;
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /*-----------------------------------------------------*/
 /*--------------------⇊-GRID-⇊------------------------*/
 /*-----------------------------------------------------*/
+
+/* img {
+  max-width: 100%;
+  height: auto;
+}
 
 .container {
   width: 900px;
@@ -546,27 +587,91 @@ tr img {
 
 .navigation-logo {
   width: 154px;
+  height: 64px;
   margin: 0;
+  margin-top: 10px;
   padding: 0;
 }
 
 .site-navigation {
-  width: 350px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 376px;
   margin: 0;
+  margin-top: 20px;
   padding: 0;
+}
+
+.site-navigation a {
+  display: block;
+  padding: 10px 13px;
+  margin-right: 1px;
 }
 
 .user-navigation {
-  width: 245px;
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  width: 300px;
   margin: 0;
+  margin-top: 23px;
   padding: 0;
 }
 
+.user-navigation a,
+.search-button {
+  display: block;
+  padding: 8px 13px;
+  padding-left: 47px;
+  margin-left: 10px;
+}
+
+.login-button,
+.cart-button {
+  position: relative;
+}
+
+.login-button::before {
+  content: "";
+  position: absolute;
+  width: 21px;
+  height: 19px;
+  top: 6px;
+  left: 16px;
+  background: url("../img/login.svg") no-repeat 0 0;
+}
+
+.cart-button::before {
+  content: "";
+  position: absolute;
+  width: 21px;
+  height: 20px;
+  top: 6px;
+  left: 16px;
+  background: url("../img/cart.svg") no-repeat 0 0;
+}
+
+.cart-filled::before {
+  background: url("../img/cart_filled.svg") no-repeat 0 0;
+}
+
+.search-button{
+  padding: 7px 7px;
+  padding-left: 7px;
+}
+
+.search-button img {
+  vertical-align: middle;
+}
+
 .main-header-info {
+  position: relative;
+  top: -4px;
   margin: 0 auto;
-  margin-right: 20px;
+  margin-right: 0;
   width: 170px;
   min-height: 40px;
+  text-align: right;
 }
 
 .slider {
@@ -583,22 +688,26 @@ tr img {
 
 .slider-item {
   width: 670px;
-  min-height: 210px;
+  min-height: 220px;
   margin: 0 auto;
-  padding-top: 285px;
+  padding-top: 275px;
 }
 
 .slider-description {
   min-height: 105px;
-  padding-bottom: 25px;
+  padding-bottom: 32px;
 }
 
 .slider-item a {
-  padding: 10px 40px;
+  padding: 12px 40px;
+}
+
+.slider-item img {
+  top: -33px;
 }
 
 .stock {
-  margin-top: 19px;
+  margin-top: 36px;
 }
 
 .stock-list {
@@ -609,8 +718,26 @@ tr img {
 }
 
 .stock-item {
+  position: relative;
   width: 420px;
   height: 230px;
+}
+
+.stock-item h3 {
+  margin: 0;
+  padding: 25px 20px;
+}
+
+.stock-item p {
+  margin: 0;
+  padding: 0 20px;
+}
+
+.stock-item .button {
+  position: absolute;
+  bottom: 25px;
+  right: 20px;
+  padding: 11px 22px; 
 }
 
 .catalog {
@@ -630,7 +757,12 @@ tr img {
 .catalog-item {
   position: relative;
   width: 200px;
-  margin-bottom: 25px;
+  margin-bottom: 22px;
+}
+
+.catalog-item p:not(.price) {
+  text-align: center;
+  margin-top: 5px;
 }
 
 .hot,
@@ -640,6 +772,10 @@ tr img {
   left: 0;
 }
 
+.price {
+  top: 90px;
+}
+
 .about-us {
   min-height: 372px;
   margin: 0 20px;
@@ -647,10 +783,66 @@ tr img {
 
 .about-us h2 {
   margin: 0;
+  padding: 25px 20px;
+  padding-bottom: 0;
+  margin-bottom: 10px;
 }
 
 .about-us-elements {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   padding: 0;
+  margin-bottom: 2px;
+
+  margin: 0 20px;
+}
+
+.about-us-elements li {
+  position: relative;
+  width: 343px;
+  padding-left: 57px;
+  margin: 10px 0;
+}
+
+.description-1::before {
+  content: "";
+  position: absolute;
+  width: 49px;
+  height: 49px;
+  top: -10px;
+  left: 0;
+  background: url("../img/icon_icecream.svg") no-repeat 0 0;
+}
+
+.description-2::before {
+  content: "";
+  position: absolute;
+  width: 49px;
+  height: 49px;
+  top: -10px;
+  left: 0;
+  background: url("../img/icon_leaf.svg") no-repeat 0 0;
+}
+
+.description-3::before {
+  content: "";
+  position: absolute;
+  width: 49px;
+  height: 49px;
+  top: -10px;
+  left: 0;
+  background: url("../img/icon_cow.svg") no-repeat 0 0;
+}
+
+.description-4::before {
+  content: "";
+  position: absolute;
+  width: 49px;
+  height: 49px;
+  top: -10px;
+  left: 0;
+  background: url("../img/icon_thermo.svg") no-repeat 0 0;
 }
 
 .flex-main {
@@ -668,8 +860,35 @@ tr img {
   width: 420px;
 }
 
+.news-title {
+  margin: 0;
+  padding: 25px 20px;
+  padding-bottom: 0;
+  margin-bottom: 8px;
+}
+
+.news-text {
+  width: 288px;
+  margin: 0 20px;
+}
+
 .dispatch {
   width: 410px;
+}
+
+.dispatch-text {
+  margin: 0;
+  padding: 30px 22px;
+  padding-bottom: 0;
+}
+
+.dispatch-form p {
+  margin: 0;
+}
+
+.dispatch-form input {
+  width: 229px;
+  padding: 12px 15px; 
 }
 
 .map {
@@ -691,6 +910,23 @@ tr img {
   min-height: 305px;
 }
 
+.map-adress p {
+  width: 225px;
+  padding: 0 25px;
+}
+
+.map-adress p:first-child {
+  margin-top: 29px;
+}
+
+.map-adress a {
+  display: block;
+  width: 216px;
+  padding: 12px 18px;
+  margin: 0 25px;
+  margin-top: 35px;
+}
+
 .main-footer {
   display: flex;
   justify-content: space-between;
@@ -701,16 +937,63 @@ tr img {
 }
 
 .footer-social {
-  width: 185px;
+  width: 210px;
+  
 }
 
 .social-list {
-  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 25px;
   padding: 0;
+}
+
+.social-list a {
+  margin-right: 20px;
 }
 
 .footer-links {
   width: 330px;
+}
+
+.links-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+  margin-top: 20px;
+}
+
+.links-list li {
+  width: 163px;
+  margin-bottom: 5px;
+}
+
+.heart {
+  position: relative;
+}
+
+.heart::before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 13px;
+  background: url("../img/heart.svg") no-repeat 0 0;
+  top: 0;
+  left: -20px;
+}
+
+.footer-copyright {
+  margin-top: 5px;
+}
+
+.footer-copyright p {
+  margin: 0;
+}
+
+.footer-copyright img {
+  width: 108px;
+  height: 39px;
 }
 
 .breadcrumbs {
@@ -743,13 +1026,690 @@ tr img {
 
 .pagination-list {
   margin-top: 25px;
+  margin-bottom: 45px;
   margin-left: auto;
   margin-right: 20px;
   width: 190px;
 }
 .pagination-item {
   display: inline-block;
+  vertical-align: middle;
   text-align: center;
   width: 27px;
   height: 26px;
+} */
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 27px;
+}
+
+.main-header {
+  margin: 0 auto;
+  width: 1200px;
+  min-height: 112px;
+}
+
+.main-navigation {
+  display: flex;
+  justify-content: flex-start;
+  min-height: 72px;
+  margin: 0 27px;
+}
+
+.navigation-logo {
+  width: 154px;
+  height: 64px;
+  margin: 0;
+  margin-top: 10px;
+  padding: 0;
+}
+
+.site-navigation {
+  display: flex;
+  flex-wrap: wrap;
+  width: 376px;
+  margin: 0;
+  margin-top: 20px;
+  margin-left: 10px;
+  padding: 0;
+}
+
+.site-navigation a {
+  display: block;
+  padding: 10px 13px;
+  margin-right: 1px;
+}
+
+.user-navigation {
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  width: 300px;
+  margin: 0;
+  margin-left: auto;
+  margin-right: 0px;
+  margin-top: 23px;
+  padding: 0;
+}
+
+.user-navigation a,
+.search-button {
+  display: block;
+  padding: 8px 13px;
+  padding-left: 47px;
+  margin-left: 10px;
+}
+
+.login-button,
+.cart-button {
+  position: relative;
+}
+
+.login-button::before {
+  content: "";
+  position: absolute;
+  width: 21px;
+  height: 19px;
+  top: 6px;
+  left: 16px;
+  background: url("../img/login.svg") no-repeat 0 0;
+}
+
+.cart-button::before {
+  content: "";
+  position: absolute;
+  width: 21px;
+  height: 20px;
+  top: 6px;
+  left: 16px;
+  background: url("../img/cart.svg") no-repeat 0 0;
+}
+
+.cart-filled::before {
+  background: url("../img/cart_filled.svg") no-repeat 0 0;
+}
+
+.search-button{
+  padding: 7px 7px;
+  padding-left: 7px;
+}
+
+.search-button img {
+  vertical-align: middle;
+}
+
+.main-header-info {
+  position: relative;
+  top: -4px;
+  margin: 0 auto;
+  margin-right: 27px;
+  width: 170px;
+  min-height: 40px;
+  text-align: right;
+}
+
+.slider {
+  margin: 0;
+  min-height: 495px;
+}
+
+.slider-list,
+.slider-description {
+  padding: 0;
+  margin: 0;
+  min-height: 100%;
+}
+
+.slider-item {
+  width: 670px;
+  min-height: 220px;
+  margin: 0 auto;
+  padding-top: 275px;
+}
+
+.slider-description {
+  min-height: 105px;
+  padding-bottom: 32px;
+}
+
+.slider-item a {
+  padding: 12px 40px;
+}
+
+.slider-item img {
+  top: -33px;
+}
+
+.slider-controls label {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  margin-right: 8px;
+  vertical-align: top;
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 25px;
+  left: 27px;
+  font-size: 0;
+}
+
+#btn-1:checked ~ .slider-controls label[for="btn-1"],
+#btn-2:checked ~ .slider-controls label[for="btn-2"],
+#btn-3:checked ~ .slider-controls label[for="btn-3"] {
+  background-color: #ffffff;
+}
+
+.stock {
+  margin-top: 36px;
+}
+
+.stock-list {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0 26px;
+}
+
+.stock-item {
+  position: relative;
+  width: 560px;
+  min-height: 230px;
+}
+
+.stock-item h3 {
+  margin: 0;
+  padding: 25px 20px;
+}
+
+.stock-item p {
+  margin: 0;
+  padding: 0 20px;
+}
+
+.stock-item .button {
+  position: absolute;
+  bottom: 25px;
+  right: 20px;
+  padding: 11px 22px; 
+}
+
+.catalog {
+  margin-top: 40px;
+  min-height: 277px;
+}
+
+.catalog-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 26px;
+  padding: 0;
+  flex-wrap: wrap;
+}
+
+.catalog-item {
+  position: relative;
+  width: 267px;
+  margin-bottom: 22px;
+}
+
+.catalog-item p:not(.price) {
+  text-align: center;
+  margin-top: 5px;
+}
+
+.hot,
+.price {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.price {
+  top: 160px;
+}
+
+.about-us {
+  min-height: 306px;
+  margin: 0 26px;
+}
+
+.about-us h2 {
+  margin: 0;
+  padding: 25px 20px;
+  padding-bottom: 0;
+  margin-bottom: 10px;
+}
+
+.about-us-elements {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+  margin-bottom: 2px;
+
+  margin: 0 20px;
+}
+
+.about-us-elements li {
+  position: relative;
+  width: 484px;
+  padding-left: 57px;
+  margin: 10px 0;
+}
+
+.description-1::before {
+  content: "";
+  position: absolute;
+  width: 49px;
+  height: 49px;
+  top: -10px;
+  left: 0;
+  background: url("../img/icon_icecream.svg") no-repeat 0 0;
+}
+
+.description-2::before {
+  content: "";
+  position: absolute;
+  width: 49px;
+  height: 49px;
+  top: -10px;
+  left: 0;
+  background: url("../img/icon_leaf.svg") no-repeat 0 0;
+}
+
+.description-3::before {
+  content: "";
+  position: absolute;
+  width: 49px;
+  height: 49px;
+  top: -10px;
+  left: 0;
+  background: url("../img/icon_cow.svg") no-repeat 0 0;
+}
+
+.description-4::before {
+  content: "";
+  position: absolute;
+  width: 49px;
+  height: 49px;
+  top: -10px;
+  left: 0;
+  background: url("../img/icon_thermo.svg") no-repeat 0 0;
+}
+
+.flex-main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 26px;
+  margin-top: 40px;
+  min-height: 220px;
+}
+
+.news,
+.dispatch {
+  padding: 0;
+  width: 560px;
+}
+
+.news-title {
+  margin: 0;
+  padding: 25px 20px;
+  padding-bottom: 0;
+  margin-bottom: 8px;
+}
+
+.news-text {
+  width: 288px;
+  margin: 0 20px;
+}
+
+.dispatch {
+  width: 550px;
+}
+
+.dispatch-text {
+  margin: 0;
+  padding: 30px 22px;
+  padding-bottom: 0;
+}
+
+.dispatch-form {
+  display: flex;
+  margin-top: 35px;
+  align-items: center;
+}
+
+.dispatch-form p {
+  margin: 0;
+}
+
+.dispatch-form input {
+  width: 338px;
+  margin-left: 20px;
+  padding: 12px 15px; 
+}
+
+.dispatch-form button {
+  padding: 12px 19px;
+  margin-left: 11px
+}
+
+.map {
+  position: relative;
+  height: 429px;
+  margin-top: 40px;
+  overflow: hidden;
+}
+
+.map > p {
+  margin: 0;
+}
+
+.map-adress {
+  position: absolute;
+  top: 62px;
+  right: 27px;
+  width: 302px;
+  min-height: 305px;
+}
+
+.map-adress p {
+  width: 225px;
+  padding: 0 25px;
+}
+
+.map-adress p:first-child {
+  margin-top: 29px;
+}
+
+.map-adress a {
+  display: block;
+  width: 216px;
+  padding: 12px 18px;
+  margin: 0 25px;
+  margin-top: 35px;
+}
+
+.main-footer {
+  display: flex;
+  justify-content: space-between;
+  width: 1146px;
+  margin: 0 auto;
+  margin-top: 15px;
+  
+}
+
+.footer-social {
+  width: 210px;
+  margin-left: 2px;
+}
+
+.social-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 25px;
+  padding: 0;
+}
+
+.social-list a {
+  margin-right: 15px;
+  width: 32px;
+  height: 32px;
+}
+
+.footer-links {
+  width: 330px;
+}
+
+.links-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+  margin-top: 20px;
+}
+
+.links-list li {
+  width: 163px;
+  margin-bottom: 10px;
+}
+
+.heart {
+  position: relative;
+}
+
+.heart::before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 13px;
+  background: url("../img/heart.svg") no-repeat 0 0;
+  top: 0;
+  left: -20px;
+}
+
+.footer-copyright {
+  margin-top: 3px;
+}
+
+.footer-copyright p {
+  margin: 0;
+  margin-top: 5px;
+}
+
+.breadcrumbs {
+  margin: 0;
+  margin-top: -15px;
+  padding-left: 27px;
+}
+
+.breadcrumbs li {
+  display: inline-block;
+  margin-right: 6px;
+}
+
+.breadcrumbs li:not(:last-child)::after {
+  content: "»";
+  margin-left: 8px;
+  text-decoration: none;
+}
+
+.title {
+  margin: 0;
+  margin-top: 5px;
+  padding-left: 27px;
+  width: 879;
+}
+
+.filter {
+  padding: 0 27px;
+  margin-top: 15px;
+  min-height: 132px;
+}
+
+.filter-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.filter-form fieldset {
+  padding: 0;
+  margin: 0;
+}
+
+.filter-form div {
+  margin-top: 10px;
+  margin-bottom: 2px;
+  margin-right: 16px;
+}
+
+.filter-title {
+  margin-left: 15px;
+}
+
+.filter-form .filter-section {
+  margin: 0;
+  margin-top: 5px;
+}
+
+.filter-sort .filter-section {
+  width: 170px;
+  padding: 8px 12px;
+}
+
+.filter-price .filter-section {
+  width: 176px;
+  padding: 8px 22px;
+}
+
+.filter-fat .filter-section {
+  width: 385px;
+  padding: 7px 15px;
+}
+
+.filter-fill .filter-section {
+  width: 671px;
+  padding: 8px 16px;
+}
+
+.filter-section select {
+  width: 100%;
+  border: none;
+  background: none;
+  color: white;
+}
+
+.filter-price .range-controls {
+  height: 20px;
+  margin: 0;
+  margin-top: 5px;
+  padding-top: 16px;
+  padding-bottom: 0;
+}
+
+.filter-price {
+  position: relative;
+}
+
+.range-controls .scale {
+  height: 4px;
+  margin: 0;
+  background: rgba(248,247,244,0.5);
+}
+
+.range-controls .bar {
+  width: 70%;
+  height: 4px;
+  margin: 0;
+
+  background: #f8f7f4;
+}
+
+.range-controls {
+  position: relative;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: 4px;
+  height: 4px;
+  padding: 0;
+  margin: 0;
+  border: 8px solid #ffffff;
+  background-color: #ababab;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 18px;
+}
+
+.range-controls .toggle-max {
+  left: 132px;
+}
+
+.filter-price .price-controls {
+  position: absolute;
+  margin: 0;
+  top: 0;
+  left: 60px;
+  font-size: 0;
+  width: 160px;
+}
+
+.price-controls label {
+  display: inline-block;
+  width: 50%;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.price-controls input {
+  width: 30px;
+  border: none;
+  background-color: rgba(0,0,0,0);
+  color: white;
+}
+
+.filter-button {
+  height: 36px;
+  padding: 0 30px;
+  margin-top: 28px;
+}
+
+.pagination-list {
+  position: relative;
+  margin-top: 53px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: 20px;
+  width: 184px;
+}
+
+.pagination-item,
+.paginator-arrow {
+  display: inline-block;
+  vertical-align: bottom;
+  text-align: center;
+  width: 27px;
+  height: 26px;
+}
+
+.arrow-left {
+  position: absolute;
+  transform: scale(-1);
+  left: -30px;
+}
+
+.arrow-left svg {
+  margin-top: 6px;
+}
+
+.arrow-right svg {
+  margin-top: 6px;
+}
+
+.border-footer {
+  border-top: 1px solid rgba(255,255,255,0.3);
+  padding-top: 15px;
 }
