--- a/css/style.css
+++ b/css/style.css
@@ -1048,7 +1048,7 @@ img {
   min-width: 900px;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 2.25%;
+  padding: 0 2.27%;
   box-sizing: border-box;
 }
 
@@ -1076,14 +1076,14 @@ img {
   flex-wrap: wrap;
   width: 376px;
   margin: 0;
-  margin-top: 20px;
+  margin-top: 22px;
   margin-left: 10px;
   padding: 0;
 }
 
 .site-navigation a {
   display: block;
-  padding: 10px 13px;
+  padding: 8px 13px;
   margin-right: 1px;
 }
 
@@ -1102,8 +1102,8 @@ img {
 .user-navigation a,
 .search-button {
   display: block;
-  padding: 8px 13px;
-  padding-left: 47px;
+  padding: 8px 15px;
+  padding-left: 45px;
   margin-left: 10px;
 }
 
@@ -1147,12 +1147,14 @@ img {
 
 .main-header-info {
   position: relative;
-  top: -4px;
+  top: 3px;
   margin: 0 auto;
   margin-right: 0;
+  margin-top: -10px;
   width: 170px;
   min-height: 40px;
   text-align: right;
+  line-height: 25px;
 }
 
 .slider {
@@ -1267,7 +1269,7 @@ img {
 
 .catalog-item p:not(.price) {
   text-align: center;
-  margin-top: 5px;
+  margin-top: 8px;
 }
 
 .catalog-item div {
@@ -1311,9 +1313,10 @@ img {
 
 .about-us-elements li {
   position: relative;
-  width: 40%/*484px*/;
+  width: 49%/*484px*/;
   padding-left: 57px;
   margin: 10px 0;
+  box-sizing: border-box;
 }
 
 .description-1::before {
@@ -1383,6 +1386,9 @@ img {
 }
 
 .dispatch {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 48%;
 }
 
@@ -1394,7 +1400,7 @@ img {
 
 .dispatch-form {
   display: flex;
-  margin-top: 35px;
+  margin-bottom: 35px;
   align-items: center;
 }
 
@@ -1403,14 +1409,16 @@ img {
 }
 
 .dispatch-form input {
-  width: 40%;
+  width: 50%;
   margin-left: 20px;
   padding: 12px 15px; 
+  flex-grow: 1;
 }
 
 .dispatch-form button {
   padding: 12px 19px;
-  margin-left: 11px
+  margin-left: 11px;
+  margin-right: 20px;
 }
 
 .map {
@@ -1421,11 +1429,22 @@ img {
 }
 
 .map img {
-  height: 100%;
+  width: 100%;
 }
 
 .map > p {
   margin: 0;
+}
+
+.map-adress-absolute {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.map-adress-relative {
+  position: relative;
 }
 
 .map-adress {
@@ -1439,6 +1458,12 @@ img {
 .map-adress p {
   width: 225px;
   padding: 0 25px;
+  margin-top: 20px;
+}
+
+.map-adress .map-adress-phone {
+  line-height: 25px;
+  margin-top: 10px;
 }
 
 .map-adress p:first-child {
@@ -1450,7 +1475,7 @@ img {
   width: 216px;
   padding: 12px 18px;
   margin: 0 25px;
-  margin-top: 35px;
+  margin-bottom: 30px;
 }
 
 .main-footer {
@@ -1473,7 +1498,7 @@ img {
 }
 
 .social-list a {
-  margin-right: 15px;
+  margin-right: 18px;
   width: 32px;
   height: 32px;
 }
@@ -1515,7 +1540,10 @@ img {
 
 .footer-copyright p {
   margin: 0;
-  margin-top: 5px;
+}
+
+.footer-copyright img {
+  transform: scale(0.85);
 }
 
 .breadcrumbs {
@@ -1557,7 +1585,7 @@ img {
 
 .filter-form fieldset {
   margin-left: 0;
-  margin-top: 10px;
+  margin-top: 12px;
   margin-bottom: 2px;
   
   padding: 0;
@@ -1688,16 +1716,18 @@ padding: 0 22px;
 }
 
 .pagination-list {
+  display: flex;
+  justify-content: space-between;
   position: relative;
-  margin-top: 53px;
-  margin-bottom: 20px;
+  right: -15px;
+  margin-top: 45px;
+  margin-bottom: 30px;
   margin-left: auto;
-  width: 184px;
+  width: 180px;
 }
 
 .pagination-item,
 .paginator-arrow {
-  display: inline-block;
   vertical-align: bottom;
   text-align: center;
   line-height: 26px;
