--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,10 @@ a {
   box-shadow: 0px -2px 2px 0px rgba(172, 16, 0, 0.64);
 }
 
-.form input
+.form input[type="text"],
+.form input[type="search"],
+.form input[type="email"],
+.form input[type="password"],
 .form textarea {
   font: inherit;
   font-weight: bold;
@@ -102,13 +105,19 @@ a {
 }
 
 
-.form input:hover,
+.form input[type="text"]:hover,
+.form input[type="search"]:hover,
+.form input[type="email"]:hover,
+.form input[type="password"]:hover,
 .form textarea:hover {
   border-color: #c7c6c5;
   box-shadow: inset 0 0 0 1px #c7c6c5;
 }
 
-.form input:focus,
+.form input[type="text"]:focus,
+.form input[type="search"]:focus,
+.form input[type="email"]:focus,
+.form input[type="password"]:focus,
 .form textarea:focus {
   border-color: #8fbdec;
   box-shadow: inset 0 0 0 1px #8fbdec;
@@ -523,7 +532,7 @@ tr img {
   font-size: 14px;
 }
 
-.catalog-item:hover {
+.catalog-item:hover::before {
   background-color: rgba(255,255,255,0.2);
   border-radius: 5px;
 }
@@ -1288,8 +1297,28 @@ img {
   margin-top: 8px;
 }
 
-.catalog-item div {
+.catalog-item div:first-child {
   position: relative;
+}
+
+.catalog-flex {
+  display: flex;
+  justify-content: center;
+}
+
+.catalog-item .item-button {
+  display: none;
+  position: absolute;
+  bottom: -35px;
+  padding: 11px 18px;
+}
+
+.catalog-item:hover {
+  z-index: 1;
+}
+
+.catalog-item:hover .item-button {
+  display: block;
 }
 
 .hot {
@@ -1799,6 +1828,11 @@ img {
   z-index: 1;
 }
 
+.item-button {
+  position: absolute;
+  bottom: -30px;
+}
+
 .submenu {
   box-sizing: border-box;
   padding: 4px 0;
@@ -1925,6 +1959,13 @@ img {
   margin-right: 0;
   margin-left: auto;
   width: 142px;
+}
+
+.catalog-item::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 395px;
 }
 
 .site-navigation-menu:first-child:hover .submenu,
