--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,16 @@ body {
   background-color: #849d8f;
 }
 
-.background {
+.background-1 {
   background: #849d8f url("../img/light_1.png") top center no-repeat;
+}
+
+.background-2 {
+  background: #8996a6 url("../img/light_2.png") top center no-repeat;
+}
+
+.background-3 {
+  background: #9d8b84 url("../img/light_3.png") top center no-repeat;
 }
 
 .catalog-background {
@@ -1206,6 +1214,10 @@ img {
   padding-bottom: 32px;
 }
 
+.slider-hide {
+  display: none;
+}
+
 .slider-item a {
   padding: 12px 40px;
 }
@@ -1475,6 +1487,13 @@ img {
 
 .map img {
   width: 100%;
+  z-index: -1;
+}
+
+.map iframe {
+  position: relative;
+
+  border: none;
 }
 
 .map > p {
@@ -1975,6 +1994,30 @@ img {
   display: block;
 }
 
+@keyframes show {
+ 0% {
+    transform: scale(0);
+  }
+
+  70% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes opacityup {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -1987,9 +2030,15 @@ img {
   padding-bottom: 25px;
 }
 
-.modal::before {
-  content: "";
-  background-color: rgba(0,0,0,0.3);
+.modal-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(0,0,0,0.2);
 }
 
 .modal p {
@@ -2034,6 +2083,16 @@ img {
   background: url("../img/cross.svg");
   border: 0;
   cursor: pointer;
+}
+
+.modal-show {
+  display: block;
+  animation: show 0.6s;
+}
+
+.overlay-show {
+  display: block;
+  animation: opacityup 0.5s;
 }
 
 .filter-checkbox,
