--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,6 @@ a {
 
 .button {
   text-align: center;
-  vertical-align: middle;
   color: white;
   font-size: 18px;
   font-weight: bold; 
@@ -492,7 +491,6 @@ tr img {
   font-size: 12px;
 }
 
-.footer-links,
 .footer-copyright a {
   text-decoration: underline;
 }
@@ -922,19 +920,15 @@ img {
   position: relative;
 }
 
-.catalog-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.catalog-button-wrapper {
+  position: absolute;
+  width: 100%;
+  bottom: -35px;
+  text-align: center;
 }
 
 .catalog-item .item-button {
   display: none;
-  position: absolute;
-  bottom: -35px;
   padding: 11px 18px;
 }
 
@@ -943,7 +937,7 @@ img {
 }
 
 .catalog-item:hover .item-button {
-  display: block;
+  display: inline-block;
 }
 
 .hot {
@@ -1069,16 +1063,6 @@ img {
 }
 
 .dispatch {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   width: 48%;
 }
 
@@ -1092,6 +1076,7 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 35px;
   margin-bottom: 35px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -1164,6 +1149,10 @@ img {
   margin-top: 20px;
 }
 
+.map-adress p:nth-child(2) {
+margin-top: 0;
+}
+
 .map-adress .map-adress-phone {
   line-height: 25px;
   margin-top: 10px;
@@ -1171,6 +1160,8 @@ img {
 
 .map-adress p:first-child {
   margin-top: 29px;
+  margin-bottom: 0;
+  width: 150px;
 }
 
 .map-adress a {
@@ -1178,6 +1169,7 @@ img {
   width: 216px;
   padding: 12px 18px;
   margin: 0 25px;
+  margin-top: 25px;
   margin-bottom: 30px;
 }
 
@@ -1223,16 +1215,20 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+          justify-content: flex-start;
   padding: 0;
   margin-top: 20px;
 }
 
 .links-list li {
-  width: 163px;
+  display: inline-block;
   margin-bottom: 10px;
+  min-width: 120px;
+  margin-right: 15px;
+}
+
+.links-list a {
+text-decoration: underline;
 }
 
 .heart {
@@ -1283,9 +1279,6 @@ img {
   text-decoration: underline;
 }
 
-
-
-.
 .title {
   margin: 0;
   margin-top: 5px;
@@ -1375,9 +1368,7 @@ img {
 }
 
 .filter-fat .filter-section {
-  width: 380px;
   padding: 7px 15px;
-  padding-bottom: 11px;
 }
 
 .filter-fat label {
@@ -1385,7 +1376,6 @@ img {
 }
 
 .filter-fill .filter-section {
-  width: 671px;
   padding: 8px 16px;
   padding-bottom: 10px;
   margin-right: 14px;
@@ -1416,8 +1406,14 @@ img {
   padding-bottom: 0;
 }
 
-.filter-price {
-  position: relative;
+.filter-form .filter-price { 
+position: relative; 
+padding-top: 17px; 
+}
+
+.filter-price .filter-title { 
+position: absolute; 
+top: 0; 
 }
 
 .range-controls .scale {
@@ -1552,7 +1548,6 @@ img {
 }
 
 .item-button {
-  position: absolute;
   bottom: -30px;
 }
 
@@ -1854,45 +1849,45 @@ img {
 
 .filter-checkbox,
 .filter-radio {
-  position: relative;
-
-  padding-left: 30px;
-
   cursor: pointer;
 }
 
-.radio-indicator {
+.filter-checkbox {
   position: relative;
-  left: -30px;
+  padding-left: 30px;
 }
 
-.radio-indicator::before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  width: 14px;
-  height: 14px;
-  border: 4px solid rgba(255,255,255,0.8);
-  border-radius: 50%;
+.radio-indicator { 
+border: 4px solid rgba(255,255,255,0.8); 
+border-radius: 50%; 
+display: inline-block; 
+height: 14px; 
+width: 14px; 
+vertical-align: top; 
+position: relative; 
 }
 
-.filter-radio input[type="radio"]:hover + .radio-indicator::before {
+.radio-indicator::before { 
+
+}
+
+.filter-radio input[type="radio"]:hover + .radio-indicator {
+  border: 4px solid rgba(255,255,255,1);
+}
+
+.filter-radio input[type="radio"]:checked + .radio-indicator {
   border: 4px solid rgba(255,255,255,1);
 }
 
 .filter-radio input[type="radio"]:checked + .radio-indicator::before {
-  border: 4px solid rgba(255,255,255,1);
-}
-
-.filter-radio input[type="radio"]:checked + .radio-indicator::after {
-  content: "";
-  position: absolute;
-  top: 8px;
-  left: 7px;
-  width: 8px;
-  height: 8px;
-  background-color: white;
-  border-radius: 50%;
+  content: ''; 
+  position: absolute; 
+  height: 8px; 
+  width: 8px; 
+  background: rgba(255,255,255,1);;
+  border-radius: 50%; 
+  top: 3px; 
+  left: 3px; 
 }
 
 .checkbox-indicator {
