--- a/css/style.css
+++ b/css/style.css
@@ -831,9 +831,9 @@ img {
   font-size: 0;
 }
 
-#btn-1:checked ~ .slider-controls label[for="btn-1"],
-#btn-2:checked ~ .slider-controls label[for="btn-2"],
-#btn-3:checked ~ .slider-controls label[for="btn-3"] {
+.slider-radio-1:checked ~ .slider-controls label[for="btn-1"],
+.slider-radio-2:checked ~ .slider-controls label[for="btn-2"],
+.slider-radio-3:checked ~ .slider-controls label[for="btn-3"] {
   background-color: #ffffff;
 }
 
