--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ a.cart-filled {
 }
 
 .filter-title {
-  font-size: 14px;
+  font-size: 17px;
 }
 
 .catalog-item:hover::before {
@@ -634,7 +634,7 @@ img {
   min-width: 900px;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 1.9%;
+  padding: 0 2.2%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -668,7 +668,6 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 376px;
   margin: 0;
   margin-top: 22px;
   margin-left: 10px;
@@ -677,7 +676,7 @@ img {
 
 .site-navigation a {
   display: block;
-  padding: 8px 13px;
+  padding: 8px 14px;
 }
 
 .user-navigation {
@@ -700,7 +699,7 @@ img {
 .user-navigation a,
 .search-button {
   display: block;
-  padding: 8px 15px;
+  padding: 8px 16px;
   padding-left: 45px;
   margin-left: 10px;
 }
@@ -1261,7 +1260,7 @@ text-decoration: underline;
 
 .breadcrumbs li {
   display: inline-block;
-  margin-right: 6px;
+  margin-right: 3px;
   text-decoration: none;
 }
 
@@ -1271,8 +1270,7 @@ text-decoration: underline;
 
 .title {
   margin: 0;
-  margin-top: 5px;
-  width: 879;
+  margin-top: 3px;
 }
 
 .filter {
@@ -1301,6 +1299,7 @@ text-decoration: underline;
   margin-left: 0;
   margin-top: 12px;
   margin-bottom: 2px;
+  margin-right: 5px;
   
   padding: 0;
 }
@@ -1316,15 +1315,15 @@ text-decoration: underline;
 
 .filter-sort .filter-section {
   position: relative;
-  width: 170px;
-  padding: 8px 12px;
-  margin-right: 12px;
+  width: 165px; 
+  padding: 10px 15px 9px; 
+  margin-right: 10px;
 }
 
 .filter-sort .filter-section::before {
   content: "";
   position: absolute;
-  top: 12px;
+  top: 14px;
   right: 10px;
   -webkit-transform: scaleX(0.55);
       -ms-transform: scaleX(0.55);
@@ -1404,7 +1403,9 @@ text-decoration: underline;
 
 .filter-price .filter-title { 
   position: absolute; 
-  top: 0; 
+  top: 0;
+  left: 0; 
+  margin-left: 14px; 
 }
 
 .range-controls .scale {
@@ -1451,20 +1452,20 @@ text-decoration: underline;
   position: absolute;
   margin: 0;
   top: 0;
-  left: 60px;
+  left: 55px;
   font-size: 0;
   width: 160px;
 }
 
 .price-controls label {
   display: inline-block;
-  width: 50%;
+  width: 70px;
   font-size: 14px;
   font-weight: 500;
 }
 
 .price-controls input {
-  width: 30px;
+  width: 27px;
   border: none;
   background-color: rgba(0,0,0,0);
   color: white;
